--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Morbidostat"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
